--- a/arl.css
+++ b/arl.css
@@ -1,7 +1,3 @@
-@font-face {
-    font-family: monospace;
-}
-
 body {
     font-family: monospace;
     background-color: #283138;
@@ -30,32 +26,35 @@ body {
     
 }
 
-#stat_panel{
-    color: lightgray;
-    background-color: #384148;
-    width: calc(30% - 10px);
+#stat_panel {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    width: calc(30% - 36px);
+    height: calc(50% - 36px);
+}
+
+#msg_panel {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    width: calc(30% - 36px);
+    height: calc(50% - 36px);
+}
+
+#map_panel {
+    position: fixed;
+    right: 20px;
+    width: calc(70% - 36px);
     height: inherit;
-    float: left;
-    box-shadow: 7px 7px rgba(0,0,0,0.4);
 }
 
-.hidden {
-    display: none;
-}
-
-#2p_start, #3p_start, #4p_start, #5p_start, #ctrl_loop, #loop_speed {
-    font-family: monospace;
-}
-
-#map_panel, #msg_panel {
+#stat_panel, #msg_panel, #map_panel {
+    padding: 3px;
     color: lightgray;
     background-color: #384148;
+    box-shadow: 7px 7px rgba(0,0,0,0.4);
     overflow: auto;
-    
-    width: calc(70% - 10px);
-    height: inherit;
-    float: right;
-    box-shadow: 7px 7px rgba(0,0,0,0.4);
 }
 
 #map_panel code {
@@ -72,8 +71,9 @@ body {
     left: 10px;
 }
 
-.map_zone, .msg_feed, #ein_stats, #p1_stats, #p2_stats, #p3_stats, #p4_stats, #p5_stats {
-    white-space: pre-wrap;
+
+.hidden {
+    display: none;
 }
 
 .msg_feed .redcard {
